--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/moment": "^1.6.1",
     "cross-env": "^5.2.0",
+    "moment": "^2.29.1",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
