--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/moment": "^1.6.1",
+    "apexcharts": "^3.27.2",
     "cross-env": "^5.2.0",
     "moment": "^2.29.1",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vue-apexcharts": "^1.6.1",
+    "vue3-apexcharts": "^1.4.0"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.12.1",
