--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "cross-env": "^5.2.0",
     "moment": "^2.29.1",
     "nuxt": "^2.0.0",
+    "nuxt-sweetalert2": "^1.0.0",
     "vue-apexcharts": "^1.6.1",
+    "vue-image-shadow": "^1.1.0",
     "vue3-apexcharts": "^1.4.0"
   },
   "devDependencies": {
