--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "SET NODE_ENV=production && nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "test": "jest"
   },
   "dependencies": {
     "@nuxtjs/auth": "^4.9.1",
@@ -26,7 +27,16 @@
     "vue3-apexcharts": "^1.4.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@nuxt/test-utils": "^0.2.2",
     "@nuxtjs/vuetify": "^1.12.1",
-    "nodemon": "^1.11.0"
+    "@vue/test-utils": "^1.2.2",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^27.1.1",
+    "jest": "^27.1.1",
+    "jest-serializer-vue": "^2.0.2",
+    "nodemon": "^1.11.0",
+    "vue-jest": "^3.0.7"
   }
 }
