--- a/package.json
+++ b/package.json
@@ -27,16 +27,7 @@
     "vue3-apexcharts": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.6",
-    "@nuxt/test-utils": "^0.2.2",
     "@nuxtjs/vuetify": "^1.12.1",
-    "@vue/test-utils": "^1.2.2",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^27.1.1",
-    "jest": "^27.1.1",
-    "jest-serializer-vue": "^2.0.2",
-    "nodemon": "^1.11.0",
-    "vue-jest": "^3.0.7"
+    "nodemon": "^1.11.0"
   }
 }
