--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "SET NODE_ENV=production && nuxt start",
-    "generate": "nuxt generate",
-    "test": "jest"
+    "generate": "nuxt generate"
   },
   "dependencies": {
     "@nuxtjs/auth": "^4.9.1",
